Fix z-index problem with title and titleimg

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -281,7 +281,7 @@ h3 {
 	-webkit-transform: translate(-50%, -50%);
 	        transform: translate(-50%, -50%);
 	text-align: center;
-	z-index: 5;
+	z-index: 6;
 	background: rgba(255,255,255,0.4);
 	-webkit-transition: all 300ms ease-in;
 	transition: all 300ms ease-in;
